--- a/smartlivestock/smartlivestock/Views/ChiefComplaints/Index.cshtml
+++ b/smartlivestock/smartlivestock/Views/ChiefComplaints/Index.cshtml
@@ -113,7 +113,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.UsrName)
             </th>
-            <th></th>
+            <th>Edit/Details</th>
         </tr>
     </thead>
     <tbody>
