--- a/smartlivestock/smartlivestock/Views/FlowUps/Delete.cshtml
+++ b/smartlivestock/smartlivestock/Views/FlowUps/Delete.cshtml
@@ -31,7 +31,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="FloId" />
-        <input type="submit" class="btn btn-primary" value="Delete" class="btn btn-danger" />
+        <input type="submit" class="btn btn-primary" value="Delete" />
         <a asp-action="Index" class="btn btn-primary">Back</a>
     </form>
 </div>
