--- a/smartlivestock/smartlivestock/Views/Invastigations/Edit.cshtml
+++ b/smartlivestock/smartlivestock/Views/Invastigations/Edit.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
-<h4>Invastigation</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+<div class="container mt-4">
+    <h2 class="text-center text-primary">EDIT INVASTIGATION</h2>
+
+    <div class="row justify-content-center">
+        <form asp-action="Edit" class="col-12 col-md-8 col-lg-6 bg-light bg-gradient p-4 border" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="InvId" />
             <div class="form-group">
@@ -18,26 +17,17 @@
                 <input asp-for="InvName" class="form-control" />
                 <span asp-validation-for="InvName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="InvDate" class="control-label"></label>
-                <input asp-for="InvDate" class="form-control" />
-                <span asp-validation-for="InvDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UrName" class="control-label"></label>
-                <input asp-for="UrName" class="form-control" />
-                <span asp-validation-for="UrName" class="text-danger"></span>
-            </div>
+            <br />
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-primary">Back</a>
             </div>
+
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
