--- a/smartlivestock/smartlivestock/Views/Medicines/Details.cshtml
+++ b/smartlivestock/smartlivestock/Views/Medicines/Details.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
 <div>
-    <h4>Medicine</h4>
+    <h4>Medicine Information</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.MedId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.MedId">Edit</a>
+    <a asp-action="Index" class="btn btn-primary">Back</a>
 </div>
