--- a/smartlivestock/smartlivestock/Views/Registrations/Create.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Create.cshtml
@@ -4,24 +4,18 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<div class="container mt-4">
+    <h2 class="text-center text-primary">CREATE PATIENTS</h2>
 
-<h4>Registration</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="row justify-content-center">
+        <form asp-action="Create" class="col-12 col-md-3 col-lg-6 bg-light bg-gradient p-4 border" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PtnId" class="control-label"></label>
-                <input asp-for="PtnId" class="form-control" />
-                <span asp-validation-for="PtnId" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
@@ -37,26 +31,18 @@
                 <input asp-for="Ages" class="form-control" />
                 <span asp-validation-for="Ages" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreateDAte" class="control-label"></label>
-                <input asp-for="CreateDAte" class="form-control" />
-                <span asp-validation-for="CreateDAte" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UsrName" class="control-label"></label>
-                <input asp-for="UsrName" class="form-control" />
-                <span asp-validation-for="UsrName" class="text-danger"></span>
-            </div>
+
+
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-primary">Back</a>
             </div>
+
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
