--- a/smartlivestock/smartlivestock/Views/Registrations/Delete.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Delete.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Registration</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -57,7 +55,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="RegiId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" class="btn btn-primary" value="Delete" />
+        <a asp-action="Index" class="btn btn-primary">Back</a>
     </form>
 </div>
