--- a/smartlivestock/smartlivestock/Views/Registrations/Edit.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Edit.cshtml
@@ -4,25 +4,20 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<div class="container mt-4">
+    <h2 class="text-center text-primary">EDIT PATIENTS</h2>
 
-<h4>Registration</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <div class="row justify-content-center">
+        <form asp-action="Edit" class="col-12 col-md-3 col-lg-6 bg-light bg-gradient p-4 border" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="RegiId" />
+            <input type="hidden" asp-for="PtnId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PtnId" class="control-label"></label>
-                <input asp-for="PtnId" class="form-control" />
-                <span asp-validation-for="PtnId" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
@@ -38,25 +33,16 @@
                 <input asp-for="Ages" class="form-control" />
                 <span asp-validation-for="Ages" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreateDAte" class="control-label"></label>
-                <input asp-for="CreateDAte" class="form-control" />
-                <span asp-validation-for="CreateDAte" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UsrName" class="control-label"></label>
-                <input asp-for="UsrName" class="form-control" />
-                <span asp-validation-for="UsrName" class="text-danger"></span>
-            </div>
+
+
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-primary">Back</a>
             </div>
+
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
