--- a/smartlivestock/smartlivestock/Views/Registrations/Index.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Index.cshtml
@@ -26,7 +26,10 @@
     <div class="form-group">
 
 
-        <input type="search" id="searchInput" placeholder="Search your content.." value="@ViewData["category"]" name="category" style="width: 350px; " />
+        <input type="search"  placeholder="Name" value="@ViewData["category"]" name="category" style="width: 120px; " />
+        <input type="search"  placeholder="Patient Id" value="@ViewData["ptid"]" name="ptid" style="width: 120px; " />
+        <input type="search" placeholder="Phone No." value="@ViewData["phn"]" name="phn" style="width: 120px; " />
+        
 
 
         <input type="submit" value="Filter" class="btn btn-primary" />
