--- a/smartlivestock/smartlivestock/Views/Prescriptions/Create.cshtml
+++ b/smartlivestock/smartlivestock/Views/Prescriptions/Create.cshtml
@@ -1,79 +1,164 @@
-﻿@model smartlivestock.Models.Prescription
+﻿@model smartlivestock.Models.PrescriptionViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
+<style>
+    table {
+        width: 100%;
+    }
 
-<h1>Create</h1>
+    td {
+        padding: 8px;
+    }
 
-<h4>Prescription</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    th {
+        padding: 8px;
+    }
+</style>
+
+<div class="container mt-4">
+    <h2 class="text-center text-primary">প্রেসক্রিপশন তৈরি করুন</h2> 
+
+    <div class="row justify-content-center">
+        <form asp-action="Create" class="col-12  bg-light bg-gradient p-4 border" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
-                <label asp-for="PresName" class="control-label"></label>
-                <input asp-for="PresName" class="form-control" />
-                <span asp-validation-for="PresName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PresDate" class="control-label"></label>
-                <input asp-for="PresDate" class="form-control" />
-                <span asp-validation-for="PresDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UrName" class="control-label"></label>
-                <input asp-for="UrName" class="form-control" />
-                <span asp-validation-for="UrName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RegistrationId" class="control-label"></label>
-                <select asp-for="RegistrationId" class ="form-control" asp-items="ViewBag.RegistrationId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ChiefComplaintId" class="control-label"></label>
-                <select asp-for="ChiefComplaintId" class ="form-control" asp-items="ViewBag.ChiefComplaintId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="GeneralExaminationId" class="control-label"></label>
-                <select asp-for="GeneralExaminationId" class ="form-control" asp-items="ViewBag.GeneralExaminationId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="DiagnosisId" class="control-label"></label>
-                <select asp-for="DiagnosisId" class ="form-control" asp-items="ViewBag.DiagnosisId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="InvastigationId" class="control-label"></label>
-                <select asp-for="InvastigationId" class ="form-control" asp-items="ViewBag.InvastigationId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="MedicineId" class="control-label"></label>
-                <select asp-for="MedicineId" class ="form-control" asp-items="ViewBag.MedicineId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="DosesId" class="control-label"></label>
-                <select asp-for="DosesId" class ="form-control" asp-items="ViewBag.DosesId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="AdviceId" class="control-label"></label>
-                <select asp-for="AdviceId" class ="form-control" asp-items="ViewBag.AdviceId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="FlowUpId" class="control-label"></label>
-                <select asp-for="FlowUpId" class ="form-control" asp-items="ViewBag.FlowUpId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                @using (Html.BeginForm("Create", "Prescriptions", FormMethod.Post, new { id = "salesForm" }))
+                {
+                    <label asp-for="SinglePrescrip.RegistrationId" class="control-label">রেজি নং---নাম-----মোবাইল</label>
+                    <select id="selectedCustOriId" asp-for="SinglePrescrip.RegistrationId" class="form-control select2" asp-items="ViewBag.RegistraId">
+                       
+                    </select>
+
+                    <span asp-validation-for="SinglePrescrip" class="text-danger"></span>
+              
+                <table id="dataTable" class="table table-bordered mt-3">
+                    <thead>
+                        <tr>
+                            <th>চিপ কমপ্লেইন</th>
+                            <th>জেনারেল</th>
+                            <th>ডায়াগ</th>
+                            <th>ইনভেস্ট</th>
+                             <th>মেডি</th>
+                            <th>ডোজেস</th>
+                            <th>এডভাইস</th> 
+                            <th>ফ্লো</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                             <td>@Html.TextBoxFor(a => a.Prescriptions[0].ChiefComplaintId)</td>
+                              <td>@Html.TextBoxFor(a => a.Prescriptions[0].GeneralExaminationId)</td>
+                               <td>@Html.TextBoxFor(a => a.Prescriptions[0].DiagnosisId)</td>
+                                <td>@Html.TextBoxFor(a => a.Prescriptions[0].InvastigationId)</td>
+                                <td>@Html.TextBoxFor(a => a.Prescriptions[0].MedicineId)</td>
+                                 <td>@Html.TextBoxFor(a => a.Prescriptions[0].DosesId)</td>
+                                 <td>@Html.TextBoxFor(a => a.Prescriptions[0].AdviceId)</td>
+                                 <td>@Html.TextBoxFor(a => a.Prescriptions[0].FlowUpId)</td>
+
+                            <td>
+                                <input type="button" id="addNew" value="Add" class="btn btn-primary" />
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <div class="mt-4">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            }
+
+          </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+@section Scripts{
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+
+    <script language="javascript">
+        $(document).ready(function () {
+            // Array to store TotalAmount values
+            var totalAmountArray = [];
+
+            // Function to move to the next input field on Enter key
+            function moveToNextInput(e) {
+                var inputs = $(':input');
+                var idx = inputs.index(this);
+
+                if (e.which === 13) {
+                    e.preventDefault();
+
+                    if (idx == inputs.length - 2) {
+                        // Pressed Enter on the last input, trigger 'Add New' button
+                        $('#addNew').click();
+                    } else {
+                        // Move focus to the next input
+                        inputs[idx + 1].focus();
+                    }
+                }
+            }
+
+            // 1. Add new row
+            $("#addNew").click(function (e) {
+                e.preventDefault();
+                var $tableBody = $("#dataTable");
+                var $trLast = $tableBody.find("tr:last");
+                var $trNew = $trLast.clone();
+
+                // Clear all input fields in the new row
+                $trNew.find('input').val('');
+
+
+
+                var suffix = $trNew.find(':input:first').attr('name').match(/\d+/);
+                $trNew.find("td:last").html('<a href="#" class="remove btn btn-danger">Rmv</a>');
+                $.each($trNew.find(':input'), function (i, val) {
+                    // Replaced Name
+                    var oldN = $(this).attr('name');
+                    var newN = oldN.replace('[' + suffix + ']', '[' + (parseInt(suffix) + 1) + ']');
+                    $(this).attr('name', newN);
+                    // If you have another Type then replace with default value
+                    $(this).removeClass("input-validation-error");
+
+                    // Add event listener to move to the next input on Enter key
+                    $(this).on('keypress', moveToNextInput);
+                });
+                $trLast.after($trNew);
+
+                // Re-assign Validation
+                var form = $("#salesForm");
+                form.removeData("validator").removeData("unobtrusiveValidation");
+                $.validator.unobtrusive.parse(form);
+
+                // Set focus on the ProductName input of the new row
+                $trNew.find('.productName').focus();
+            });
+
+            // 2. Remove
+            $(document).on("click", '.remove', function (e) {
+                e.preventDefault();
+                var $row = $(this).closest('tr');
+                var index = $row.index();
+                totalAmountArray.splice(index - 1, 1); // Remove the TotalAmount at the corresponding index
+                $row.remove();
+            });
+
+        });
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.select2').select2();
+        });
+    </script>
+
 }
