--- a/smartlivestock/smartlivestock/Views/Registrations/Create.cshtml
+++ b/smartlivestock/smartlivestock/Views/Registrations/Create.cshtml
@@ -12,7 +12,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" required/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
@@ -23,7 +23,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
+                <select asp-for="Gender" class="form-control">
+                    <option value="">-Select-</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                 
+
+                </select>
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
